--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v1
         with:
-          r-version: '4.0.1'
+          r-version: 'release'
       - uses: r-lib/actions/setup-pandoc@v1
 
       - name: System dependencies
