--- a/.github/workflows/pkgdown.yml
+++ b/.github/workflows/pkgdown.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-r@v2
         with:
           r-version: 'release'
       - uses: r-lib/actions/setup-pandoc@v1
@@ -73,12 +73,4 @@ jobs:
         with:
           name: update
       - name: Push artifact
-        uses: github-actions-x/commit@v2.7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          push-branch: 'history'
-          commit-message: 'Update'
-          force-add: 'true'
-          files: available-packages-*.csv
-          name: GitHub Actions
-          email: actions@github.com
+        run:  git add available-packages-*.csv && git commit --allow-empty -m "Update" && git push
