Use GHA bot user
from:https://github.com/actions/checkout/issues/13#issuecomment-724415212

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -51,3 +51,5 @@ jobs:
           clean: false
           branch: gh-pages
           folder: docs
+          git-config-name: github-actions[bot]
+          git-config-email: 41898282+github-actions[bot]@users.noreply.github.com
